k8s/postgres.yaml
# k8s/postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  # headless service to expose the stateful set outside of cluster
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  # Add readiness and liveness probes
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17-alpine #light-weight
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-disk
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates: # creates one PVC per pod, don't need a separate PVC configuration
  - metadata:
      name: postgres-disk
    spec:
      accessModes: [ "ReadWriteOnce" ] # only be mounted by one pod
      # define what kind of storage backend to use
      # minikube comes with "standard"
      # dig deeper
        # amazon
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
